--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@angular/animations": "^15.0.0",
     "@angular/cdk": "^15.0.2",
-    "@angular/common": "^15.0.0",
+    "@angular/common": "^15.0.2",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
+    "@angular/forms": "^15.0.2",
+    "@angular/material": "^15.0.2",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "ngx-pagination": "^6.0.3",
     "pokeapi-js-wrapper": "^1.2.2",
-    "pokedex-promise-v2": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
