--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^6.0.3",
     "pokeapi-js-wrapper": "^1.2.2",
     "rxjs": "~7.5.0",
